<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:sothree="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<android.support.v4.widget.DrawerLayout
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

     <android.support.design.widget.CoordinatorLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">

        <!--<android.support.design.widget.AppBarLayout-->
            <!--android:id="@+id/appbar"-->
            <!--android:padding="15dp"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:minHeight="?attr/actionBarSize"-->
            <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
            <!--android:background="@android:color/transparent">-->

    <!--<android.support.v7.widget.Toolbar-->
        <!--android:id="@+id/toolbar"-->
        <!--android:layout_height="?attr/actionBarSize"-->
        <!--app:layout_collapseMode="pin"-->
        <!--android:minHeight="?attr/actionBarSize"-->
        <!--android:layout_width="match_parent"-->
        <!--app:titleTextColor="@color/grey"-->
        <!--android:background="@android:color/white"-->
        <!--app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"-->
        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light">-->
    <!--</android.support.v7.widget.Toolbar>-->

   <!--</android.support.design.widget.AppBarLayout>-->


        <fragment
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            sothree:context="com.example.codingmountain.googlemap_clone_bottomsheetlayout.MapsActivity" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:elevation="10dp"
                android:background="@color/whiteTextColor"
                android:id="@+id/relLayout1">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:id="@+id/ic_magnify"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_my_location_black_24dp"/>

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@+id/ic_magnify"
                    android:layout_centerVertical="true"
                    android:textSize="15sp"
                    android:textColor="#000000"
                    android:id="@+id/input_search"
                    android:completionThreshold="1"
                    android:background="@color/whiteTextColor"
                    android:hint="Enter Address, City or Zip Code"
                    android:imeOptions="actionSearch"/>


            </RelativeLayout>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal">-->

                <!--<EditText-->
                    <!--android:layout_width="248dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/editText"-->
                    <!--android:layout_weight="0.5"-->
                    <!--android:inputType="textPersonName"-->
                    <!--android:hint="Search Location" />-->

                <!--<Button-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="0.5"-->
                    <!--android:onClick="searchLocation"-->
                    <!--android:text="Search" />-->

            <!--</LinearLayout>-->



        </fragment>


         <com.getbase.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="66dp"
             android:src="@drawable/ic_my_location_black_24dp"
             app:fab_colorNormal="@color/white"
             app:fab_colorPressed="@color/white"
             app:elevation="6dp"
             app:layout_anchor="@id/map"
             app:layout_anchorGravity="bottom|left|end"
             app:pressedTranslationZ="12dp">

         </com.getbase.floatingactionbutton.FloatingActionButton>

         <!--<android.support.design.widget.FloatingActionButton-->
             <!--android:id="@+id/floatingActionButtonMenu"-->
             <!--android:layout_width="wrap_content"-->
             <!--android:layout_height="wrap_content"-->
             <!--android:layout_marginLeft="16dp"-->
             <!--android:layout_marginRight="16dp"-->
             <!--android:layout_marginBottom="66dp"-->
             <!--app:elevation="6dp"-->
             <!--app:layout_anchor="@id/map"-->
             <!--app:layout_anchorGravity="bottom|left|end"-->
             <!--app:pressedTranslationZ="12dp"-->
             <!--app:srcCompat="@drawable/minivan"-->
             <!--&gt;-->
         <!--</android.support.design.widget.FloatingActionButton>-->


         <!--<android.support.design.widget.FloatingActionButton-->
             <!--android:id="@+id/ranks"-->
             <!--android:layout_width="45dp"-->
             <!--android:layout_height="37dp"-->
             <!--android:layout_marginLeft="20dp"-->
             <!--android:layout_marginRight="5dp"-->
             <!--android:layout_marginBottom="68dp"-->


             <!--android:src="@drawable/minibus"-->
             <!--app:elevation="6dp"-->
             <!--app:layout_anchor="@id/map"-->
             <!--app:layout_anchorGravity="bottom|left|end"-->


             <!--app:pressedTranslationZ="12dp">-->

         <!--</android.support.design.widget.FloatingActionButton>-->

         <!--<android.support.design.widget.FloatingActionButton-->
             <!--android:id="@+id/reports"-->
             <!--android:layout_width="45dp"-->
             <!--android:layout_height="37dp"-->
             <!--android:layout_marginLeft="20dp"-->
             <!--android:layout_marginRight="10dp"-->
             <!--android:layout_marginBottom="88dp"-->


             <!--android:src="@drawable/minivan"-->
             <!--app:elevation="25dp"-->
             <!--app:layout_anchor="@id/map"-->
             <!--app:layout_anchorGravity="bottom|left|end"-->

             <!--app:pressedTranslationZ="22dp">-->
         <!--</android.support.design.widget.FloatingActionButton>-->

         <!--<android.support.design.widget.FloatingActionButton-->
             <!--android:id="@+id/menuLogout"-->
             <!--android:layout_width="45dp"-->
             <!--android:layout_height="37dp"-->
             <!--android:layout_marginLeft="20dp"-->
             <!--android:layout_marginRight="10dp"-->
             <!--android:layout_marginBottom="98dp"-->


             <!--app:elevation="45dp"-->
             <!--app:layout_anchor="@id/map"-->
             <!--app:layout_anchorGravity="bottom|left|end"-->
             <!--app:fab_colorNormal="@color/colorPrimaryDark"-->
             <!--app:fab_colorPressed="@color/colorPrimaryDark"-->
             <!--app:fab_icon="@drawable/minivan"-->
             <!--app:fab_size="mini"-->
             <!--app:fab_title="Logout"-->

             <!--app:pressedTranslationZ="32dp">-->

         <!--</android.support.design.widget.FloatingActionButton>-->

         <com.getbase.floatingactionbutton.FloatingActionsMenu
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|right|end"
             app:fab_addButtonColorPressed="#FF00FF"
             app:fab_addButtonPlusIconColor="@color/white"
             app:fab_labelStyle="@style/custom_fab"
             android:id="@+id/floatingActionButtonMenu"
             >


             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:fab_colorNormal="@color/white"
                 app:fab_colorPressed="@color/colorPrimaryDark"
                 app:fab_icon="@drawable/minivan"
                 app:fab_size="mini"
                 android:id="@+id/fab_action3"
                 app:fab_title="Logout"/>

             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:fab_colorNormal="@color/white"
                 app:fab_colorPressed="@color/colorPrimaryDark"
                 app:fab_icon="@drawable/minivan"
                 app:fab_size="mini"
                 android:id="@+id/fab_action1"
                 app:fab_title="Taxi Ranks"/>


             <com.getbase.floatingactionbutton.FloatingActionButton
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:fab_colorNormal="@color/white"
                 app:fab_colorPressed="@color/colorPrimaryDark"
                 app:fab_icon="@drawable/minivan"
                 app:fab_size="mini"
                 android:id="@+id/fab_action2"
                 app:fab_title="Rate"/>


             <!--<com.getbase.floatingactionbutton.FloatingActionButton-->
                 <!--android:layout_width="wrap_content"-->
                 <!--android:layout_height="wrap_content"-->
                 <!--app:fab_colorNormal="@color/white"-->
                 <!--app:fab_colorPressed="@color/colorPrimaryDark"-->
                 <!--app:fab_icon="@drawable/minivan"-->
                 <!--app:fab_size="mini"-->
                 <!--android:id="@+id/fab_action4"-->
                 <!--app:fab_title="Reports"/>-->

             </com.getbase.floatingactionbutton.FloatingActionsMenu>

     </android.support.design.widget.CoordinatorLayout>

    </FrameLayout>


</android.support.v4.widget.DrawerLayout>

   <!--<include layout="@layout/bottomsheet_layout"></include>-->

</android.support.design.widget.CoordinatorLayout>

